@@ -71,7 +71,6 @@ import org.apache.hadoop.hbase.LeaseListener;
 import org.apache.hadoop.hbase.Leases;
 import org.apache.hadoop.hbase.LocalHBaseCluster;
 import org.apache.hadoop.hbase.NotServingRegionException;
-import org.apache.hadoop.hbase.RegionHistorian;
 import org.apache.hadoop.hbase.RemoteExceptionHandler;
 import org.apache.hadoop.hbase.UnknownRowLockException;
 import org.apache.hadoop.hbase.UnknownScannerException;
@@ -601,7 +600,6 @@ public class HRegionServer implements HConstants, HRegionInterface,
         abort();
       }
     }
-    RegionHistorian.getInstance().offline();
     this.leases.closeAfterLeasesExpire();
     this.worker.stop();
     this.server.stop();
@@ -1558,11 +1556,6 @@ public class HRegionServer implements HConstants, HRegionInterface,
   }
   
   void openRegion(final HRegionInfo regionInfo) {
-    // If historian is not online and this is not a meta region, online it.
-    if (!regionInfo.isMetaRegion() &&
-        !RegionHistorian.getInstance().isOnline()) {
-      RegionHistorian.getInstance().online(this.conf);
-    }
     Integer mapKey = Bytes.mapKey(regionInfo.getRegionName());
     HRegion region = this.onlineRegions.get(mapKey);
     if (region == null) {
