@@ -31,6 +31,7 @@ Release 0.20.1 - Unreleased
    HBASE-1574  Client and server APIs to do batch deletes
    HBASE-1833  hfile.main fixes
    HBASE-1684  Backup (Export/Import) contrib tool for 0.20
+   HBASE-1854  Remove the Region Historian
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
